minor title change
Change-Id: I36ed3987eb27ef3545aba1e1ba90a57ca178a5c1

--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -9,7 +9,7 @@
 				<h1 class="ui icon header title">
 					{{AppName}}
 				</h1>
-				<h2>A git repo for ARDC configuration</h2>
+				<h2>A git(ea) repo for ARDC configuration</h2>
 			</div>
 		</div>
 	</div>
